--- a/personalapps/signledger/package.json
+++ b/personalapps/signledger/package.json
@@ -4,12 +4,15 @@
   "description": "Node.js application first attempt at a signin portal",
   "main": "index.js",
   "scripts": {
+    "start" : "node index.js",
     "dev": "nodemon ./index.js",
     "ui": "browser-sync start --proxy=localhost:8000 --files='**/*.css, **/*.pug, **/*.js' --ignore=node_modules --reload-delay 10 --no-ui --no-notify"
   },
   "author": "Vikas Nambiar auth0",
   "license": "ISC",
-  "devDependencies": {
+  "devDependencies":
+  {
+    "express" : "^4.16.1",
     "browser-sync": "^2.26.7",
     "nodemon": "^2.0.1"
   }
